Add LINQ to web api

--- a/GroupProject/WebAPI/Web.config
+++ b/GroupProject/WebAPI/Web.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+    <add name="BagStoreConnectionString" connectionString="Data Source=SE141133;Initial Catalog=BagStore;User ID=sa;Password=2!Idolphuc"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8"/>
