--- a/GroupProject/bin/GroupProject.dll.config
+++ b/GroupProject/bin/GroupProject.dll.config
@@ -6,7 +6,7 @@
 <configuration>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
-    <add key="webpages:Enabled" value="false"/>
+    <add key="webpages:Enabled" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
@@ -28,6 +28,7 @@
       <remove name="OPTIONSVerbHandler"/>
       <remove name="TRACEVerbHandler"/>
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+		
     </handlers>
   </system.webServer>
   <runtime>
@@ -68,4 +69,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+	<connectionStrings>
+		<add name="BagStore" connectionString="server=DESKTOP-MCUL1U0;database=BagStore;uid=sa;pwd=123456;"/>
+	</connectionStrings>
+	<system.webServer>
+		<directoryBrowse enabled="true" />
+	</system.webServer>
 </configuration>
