--- a/GroupProject/WCF/WCF.csproj
+++ b/GroupProject/WCF/WCF.csproj
@@ -61,14 +61,15 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="BagService.svc" />
+    <Content Include="Services\BagService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BagService.svc.cs">
+    <Compile Include="Entities\Bag.cs" />
+    <Compile Include="Services\BagService.svc.cs">
       <DependentUpon>BagService.svc</DependentUpon>
     </Compile>
-    <Compile Include="IBagService.cs" />
+    <Compile Include="Services\IBagService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
