--- a/GroupProject/WCF/Web.config
+++ b/GroupProject/WCF/Web.config
@@ -3,7 +3,14 @@
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="DriverActive" value="SqlServer" />
   </appSettings>
+  <connectionStrings>
+    <add name="SqlNW"
+         connectionString="server=SE141133;database=BagStore;uid=sa;pwd=2!Idolphuc;"  providerName="System.Data.SqlClient"  />
+    <add name="OleNW" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|Manager.accdb;Persist Security Info=False" providerName="System.Data.OleDb"/>
+    <add name="OracleNW" connectionString="Data Source=OraDb;User Id=scott;Password=tiger" providerName="System.Data.OracleClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8"/>
