--- a/GroupProject/WebMVC/Web.config
+++ b/GroupProject/WebMVC/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="DriverActive" value="SqlServer" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8"/>
@@ -40,4 +41,22 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IWCFBagCategoryService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:55575/Services/WCFBagCategoryService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFBagCategoryService"
+        contract="BagCategoryService.IWCFBagCategoryService" name="BasicHttpBinding_IWCFBagCategoryService" />
+    </client>
+  </system.serviceModel>
+<connectionStrings>
+    <add name="SqlNW"
+         connectionString="server=SE141133;database=BagStore;uid=sa;pwd=2!Idolphuc;"  providerName="System.Data.SqlClient"  />  
+    <add name="OleNW" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|Manager.accdb;Persist Security Info=False" providerName="System.Data.OleDb"/>
+    <add name="OracleNW" connectionString="Data Source=OraDb;User Id=scott;Password=tiger" providerName="System.Data.OracleClient"/>
+   </connectionStrings>
 </configuration>
