Display Category and Bag in 1 view

--- a/GroupProject/WebMVC/Web.config
+++ b/GroupProject/WebMVC/Web.config
@@ -45,12 +45,16 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IWCFBagCategoryService" />
+        <binding name="BasicHttpBinding_IWCFBagService" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:55575/Services/WCFBagCategoryService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFBagCategoryService"
         contract="BagCategoryService.IWCFBagCategoryService" name="BasicHttpBinding_IWCFBagCategoryService" />
+      <endpoint address="http://localhost:55575/Services/WCFBagService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFBagService"
+        contract="BagService.IWCFBagService" name="BasicHttpBinding_IWCFBagService" />
     </client>
   </system.serviceModel>
 <connectionStrings>
