--- a/GroupProject/WebMVC/WebMVC.csproj
+++ b/GroupProject/WebMVC/WebMVC.csproj
@@ -98,6 +98,13 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <None Include="Connected Services\BagService\WCFBagService.disco" />
+    <None Include="Connected Services\BagService\configuration91.svcinfo" />
+    <None Include="Connected Services\BagService\configuration.svcinfo" />
+    <None Include="Connected Services\BagService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -108,7 +115,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Controllers\BagController.cs" />
+    <Compile Include="Connected Services\BagService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -128,8 +140,21 @@
     <Content Include="Connected Services\BagCategoryService\WebMVC.BagCategoryService.BagCategory.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
+    <None Include="Connected Services\BagService\WCFBagService.wsdl" />
+    <None Include="Connected Services\BagService\WCFBagService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\BagService\WCFBagService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\BagService\WCFBagService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Connected Services\BagService\WebMVC.BagService.Bag.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="packages.config" />
-    <Content Include="Views\Bag\Admin.cshtml" />
+    <Content Include="Views\Admin.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -140,12 +165,14 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\BagCategoryService\" />
+    <WCFMetadataStorage Include="Connected Services\BagService\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
