--- a/GroupProject/WebMVC/WebMVC.csproj
+++ b/GroupProject/WebMVC/WebMVC.csproj
@@ -108,6 +108,7 @@
     <Content Include="css\style.css" />
     <Content Include="css\style_1.css" />
     <Content Include="Global.asax" />
+    <Content Include="img\logo.png" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +162,7 @@
     <Content Include="Views\CreateOrEdit.cshtml" />
     <Content Include="Views\Create.cshtml" />
     <Content Include="Views\Edit.cshtml" />
+    <Content Include="Views\AdminHeader.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -171,8 +173,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="NewFolder1\" />
-    <Folder Include="Views\Bag\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
