CreateOrEdit Form Update

--- a/GroupProject/WebMVC/WebMVC.csproj
+++ b/GroupProject/WebMVC/WebMVC.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="GlobalVariables.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -157,6 +158,9 @@
     <Content Include="Connected Services\BagService\WebMVC.BagService.Bag.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
+    <None Include="Connected Services\BagService\WCFBagService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <Content Include="Views\Admin.cshtml" />
     <Content Include="Views\CreateOrEdit.cshtml" />
