Upload image to WCF server

--- a/GroupProject/WCF/Web.config
+++ b/GroupProject/WCF/Web.config
@@ -13,9 +13,20 @@
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8"/>
+    <httpRuntime targetFramework="4.8" maxRequestLength="2147483647"/>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="WCF.Services.WCFFileService">
+        <endpoint binding="basicHttpBinding" bindingConfiguration="higherMessageSize" contract="WCF.Services.IWCFFileService"/>
+      </service>
+    </services>
+    <bindings>
+      <basicHttpBinding>
+        <!-- configure the maxReceivedMessageSize value to suit the max size of the request (in bytes) you want the service to receive-->
+        <binding name="higherMessageSize" transferMode="Streamed" maxReceivedMessageSize="2147483647" />
+      </basicHttpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior>
