--- a/GroupProject/WCF/WCF.csproj
+++ b/GroupProject/WCF/WCF.csproj
@@ -61,14 +61,22 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="img\B_2.png" />
+    <Content Include="img\B_3.png" />
+    <Content Include="img\B_4.png" />
+    <Content Include="img\B_5.png" />
+    <Content Include="img\logo.png" />
     <Content Include="Services\WCFBagCategoryService.svc" />
     <Content Include="Services\WCFBagService.svc" />
+    <Content Include="Services\WCFFileService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Bag.cs" />
     <Compile Include="Entities\BagCategory.cs" />
+    <Compile Include="Entities\FileData.cs" />
     <Compile Include="Services\IWCFBagService.cs" />
+    <Compile Include="Services\IWCFFileService.cs" />
     <Compile Include="Services\WCFBagCategoryService.svc.cs">
       <DependentUpon>WCFBagCategoryService.svc</DependentUpon>
     </Compile>
@@ -76,6 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WCFBagService.svc.cs">
       <DependentUpon>WCFBagService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="Services\WCFFileService.svc.cs">
+      <DependentUpon>WCFFileService.svc</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
