--- a/GroupProject/WebMVC/web.config
+++ b/GroupProject/WebMVC/web.config
@@ -22,7 +22,7 @@
   </system.serviceModel>
   <system.web>
     <compilation debug="true" targetFramework="4.8"/>
-    <httpRuntime targetFramework="4.8"/>
+    <httpRuntime targetFramework="4.8" maxRequestLength="2147483647"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -53,8 +53,17 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
+        <binding maxReceivedMessageSize="2147483647"
+            maxBufferSize="2147483647"
+            maxBufferPoolSize="2147483647">
+          
+        </binding>
+                 
+          
         <binding name="BasicHttpBinding_IWCFBagCategoryService" />
         <binding name="BasicHttpBinding_IWCFBagService" />
+        <binding name="BasicHttpBinding_IWCFFileService" maxReceivedMessageSize="2147483647" />
+
       </basicHttpBinding>
     </bindings>
     <client>
@@ -64,6 +73,9 @@
       <endpoint address="http://localhost:55575/Services/WCFBagService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFBagService"
         contract="BagService.IWCFBagService" name="BasicHttpBinding_IWCFBagService" />
+      <endpoint address="http://localhost:55575/Services/WCFFileService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFFileService"
+        contract="FileService.IWCFFileService" name="BasicHttpBinding_IWCFFileService"/>
     </client>
   </system.serviceModel>
 <connectionStrings>
