--- a/GroupProject/bin/GroupProject.dll.config
+++ b/GroupProject/bin/GroupProject.dll.config
@@ -14,6 +14,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms loginUrl="/Login/Login"></forms>
+	  </authentication>
     <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.8"/>
   </system.web>
