--- a/GroupProject/bin/GroupProject.dll.config
+++ b/GroupProject/bin/GroupProject.dll.config
@@ -8,6 +8,8 @@
 		<add name="StoreDB" connectionString="server=SE140061\SQLEXPRESS;database=BagStore;uid=sa;pwd=123;" />
 	</connectionStrings>
   <appSettings>
+	  <add key="ClientValidationEnabled" value="true"/>
+	  <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
