--- a/GroupProject/WebMVC/WebMVC.csproj
+++ b/GroupProject/WebMVC/WebMVC.csproj
@@ -131,7 +131,9 @@
     <Content Include="css\style.css" />
     <Content Include="css\style_1.css" />
     <Content Include="Global.asax" />
+    <Content Include="img\avatar.png" />
     <Content Include="img\logo.png" />
+    <Content Include="img\backgroundlogin.jpg" />
     <Content Include="Scripts\alertify.js" />
     <Content Include="Scripts\alertify.min.js" />
     <Content Include="Web.config" />
@@ -155,10 +157,12 @@
     </Compile>
     <Compile Include="Controllers\BagController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="GlobalVariables.cs" />
+    <Compile Include="Models\UserRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +211,12 @@
     <Content Include="Views\Create.cshtml" />
     <Content Include="Views\Edit.cshtml" />
     <Content Include="Views\AdminHeader.cshtml" />
+    <Content Include="Views\Login.cshtml" />
+    <Content Include="Views\User.cshtml" />
+    <Content Include="Views\UserHeader.cshtml" />
+    <Content Include="Views\GuestHeader.cshtml" />
+    <Content Include="Views\Guest.cshtml" />
+    <Content Include="Views\Register.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -216,7 +226,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
