--- a/GroupProject/WebMVC/bin/WebMVC.dll.config
+++ b/GroupProject/WebMVC/bin/WebMVC.dll.config
@@ -62,17 +62,12 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding maxReceivedMessageSize="2147483647"
-            maxBufferSize="2147483647"
-            maxBufferPoolSize="2147483647">
-          
-        </binding>
-                 
-          
+        <binding maxBufferPoolSize="2147483647" maxBufferSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
         <binding name="BasicHttpBinding_IWCFBagCategoryService" />
         <binding name="BasicHttpBinding_IWCFBagService" />
         <binding name="BasicHttpBinding_IWCFFileService" maxReceivedMessageSize="2147483647" />
-
+        <binding name="BasicHttpBinding_IWCFAccountService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -84,7 +79,10 @@
         contract="BagService.IWCFBagService" name="BasicHttpBinding_IWCFBagService" />
       <endpoint address="http://localhost:55575/Services/WCFFileService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFFileService"
-        contract="FileService.IWCFFileService" name="BasicHttpBinding_IWCFFileService"/>
+        contract="FileService.IWCFFileService" name="BasicHttpBinding_IWCFFileService" />
+      <endpoint address="http://localhost:55575/Services/WCFAccountService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFAccountService"
+        contract="AccountService.IWCFAccountService" name="BasicHttpBinding_IWCFAccountService" />
     </client>
   </system.serviceModel>
 <connectionStrings>
