--- a/GroupProject/WebMVC/Web.config
+++ b/GroupProject/WebMVC/Web.config
@@ -24,14 +24,8 @@
     <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.8" maxRequestLength="2147483647"/>
     <authentication mode="Forms">
-      <forms loginUrl="Account/Login"></forms>
+      <forms loginUrl="~/Account/Index"></forms>
     </authentication>
-    <roleManager defaultProvider="myRoleProvider" enabled="true">
-      <providers>
-        <clear/>
-        <add name="myRoleProvider" type="WebMVC.Models.UserRoleProvider"/>
-      </providers>
-    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -62,17 +56,12 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding maxReceivedMessageSize="2147483647"
-            maxBufferSize="2147483647"
-            maxBufferPoolSize="2147483647">
-          
-        </binding>
-                 
-          
+        <binding maxBufferPoolSize="2147483647" maxBufferSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
         <binding name="BasicHttpBinding_IWCFBagCategoryService" />
         <binding name="BasicHttpBinding_IWCFBagService" />
         <binding name="BasicHttpBinding_IWCFFileService" maxReceivedMessageSize="2147483647" />
-
+        <binding name="BasicHttpBinding_IWCFAccountService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -84,7 +73,10 @@
         contract="BagService.IWCFBagService" name="BasicHttpBinding_IWCFBagService" />
       <endpoint address="http://localhost:55575/Services/WCFFileService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFFileService"
-        contract="FileService.IWCFFileService" name="BasicHttpBinding_IWCFFileService"/>
+        contract="FileService.IWCFFileService" name="BasicHttpBinding_IWCFFileService" />
+      <endpoint address="http://localhost:55575/Services/WCFAccountService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFAccountService"
+        contract="AccountService.IWCFAccountService" name="BasicHttpBinding_IWCFAccountService" />
     </client>
   </system.serviceModel>
 <connectionStrings>
