--- a/GroupProject/WCF/WCF.csproj
+++ b/GroupProject/WCF/WCF.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -77,6 +78,7 @@
     <Compile Include="Entities\Bag.cs" />
     <Compile Include="Entities\BagCategory.cs" />
     <Compile Include="Entities\FileData.cs" />
+    <Compile Include="Entities\Order.cs" />
     <Compile Include="Services\WCFAccountService.svc.cs">
       <DependentUpon>WCFAccountService.svc</DependentUpon>
     </Compile>
